--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $("#header-inner").load("./page/header.html");
-        $("#sidebar").load("./page/sidebar.html");
+        // $("#sidebar").load("./page/sidebar.html");
       });
     </script>
   </head>
@@ -456,7 +456,7 @@
 
               <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-11">
                 <div class="Team-logo">
-                  <img src="./img/logo-ejelaw.png" alt="" />
+                  <img src="./img/logo-ejelaw2.png" alt="" />
                 </div>
                 <div class="Team-dec">
                   <p>Regulatory Compliance</p>
@@ -497,7 +497,18 @@
                   <img src="./img/partner/logo-tokenpost.png" alt="" />
                 </div>
               </li>
-
+              <li id="Partner-sgosda" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+                <div class="Partner-logo">
+                  <img src="./img/partner/logo_sgosda.png" alt="" />
+                </div>
+              </li>
+              <li id="Partner-bbr" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+                <div class="Partner-logo">
+                  <img src="./img/partner/logo_bbr.png" alt="" />
+                </div>
+              </li>
+              
+              
             </ul>
           </div>
         </div>
