--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
           </div>
 
           <div>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
               Sin Yunbok, better known as his pen name Hyewon was an elder son of famous court painter Sin Hanpyeong.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
               Sin was particularly good at illustrating human figures, he even painted daring pictures of alluring woman,
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-11">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
               a taboo for court painters who cared about their reputations. This album is certainly the finest of Sin’s known works.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-14">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
               The album includes 30 genre paintings of people in Hanyang-present day Seoul in the 18th century.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-17">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
               People are depicted in various situations in great detail and each painting emphasizes on their complicated emotion as well as their physical beauty.
             </p>
           </div>
@@ -347,7 +347,7 @@
             <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"><img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/expansion-banner-thesandbox.jpg" alt=""></p>
 
             <div class="Expansion-img">
-              <div class="Expansion-img-1 thesandbox-img-1 delay-3" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+              <div class="Expansion-img-1 thesandbox-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
                 <div>
                   <video autoplay loop muted>
                     <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Danopungjeong.mp4" type="video/mp4" />
@@ -393,7 +393,7 @@
           <div class="textarea">
             <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Team</h2>
 
-            <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle delay-3">
+            <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">
               About Kansong Art Museum
             </p>
 
@@ -421,7 +421,7 @@
 
           <div class="imgarea">
             <ul class="grid">
-              <li id="Team-kansong" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+              <li id="Team-kansong" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
                 <div class="Team-logo">
                   <img src="./img/logo-kansong-bk.png" alt="" />
                 </div>
@@ -432,7 +432,7 @@
                 </div>
               </li>
 
-              <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
+              <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
                 <div class="Team-logo">
                   <img src="./img/logo-AtomrigsLab.png" alt="" />
                 </div>
@@ -443,7 +443,7 @@
                 </div>
               </li>
 
-              <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
+              <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
                 <div class="Team-logo">
                   <img src="./img/logo-BYM.png" alt="" />
                 </div>
@@ -454,9 +454,9 @@
                 </div>
               </li>
 
-              <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-11">
+              <li id="Team-atomrigsLab" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
                 <div class="Team-logo">
-                  <img src="./img/logo-ejelaw2.png" alt="" />
+                  <img src="./img/logo-ejelaw.png" alt="" />
                 </div>
                 <div class="Team-dec">
                   <p>Regulatory Compliance</p>
@@ -486,7 +486,7 @@
                 </div>
               </li>
 
-              <li id="Partner-dcent" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+              <li id="Partner-dcent" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
                 <div class="Partner-logo">
                   <img src="./img/partner/logo-dcent.png" alt="" />
                 </div>
