--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="header-right-btn">
         <div id="btn-album">
-          <a href="">
+          <a href="imglistpage.html" target="_blank">
             <svg width="45" height="45" viewBox="0 0 45 45">
               <path d="M11.25 7.03125C11.25 6.2546 11.8796 5.625 12.6562 5.625H32.3438C33.1204 5.625 33.75 6.2546 33.75 7.03125V7.03125C33.75 7.8079 33.1204 8.4375 32.3438 8.4375H12.6562C11.8796 8.4375 11.25 7.8079 11.25 7.03125V7.03125ZM8.4375 11.25C8.4375 10.4733 9.0671 9.84375 9.84375 9.84375H35.1562C35.9329 9.84375 36.5625 10.4733 36.5625 11.25V11.25C36.5625 12.0267 35.9329 12.6562 35.1562 12.6562H9.84375C9.0671 12.6562 8.4375 12.0267 8.4375 11.25V11.25ZM40.7812 37.375C40.7812 38.4796 39.8858 39.375 38.7812 39.375H6.21875C5.11418 39.375 4.21875 38.4796 4.21875 37.375V16.0625C4.21875 14.9579 5.11418 14.0625 6.21875 14.0625H38.7813C39.8858 14.0625 40.7812 14.9579 40.7812 16.0625V37.375Z"/>
             </svg>
@@ -497,18 +497,7 @@
                   <img src="./img/partner/logo-tokenpost.png" alt="" />
                 </div>
               </li>
-              <li id="Partner-sgosda" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-                <div class="Partner-logo">
-                  <img src="./img/partner/logo_sgosda.png" alt="" />
-                </div>
-              </li>
-              <li id="Partner-bbr" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-                <div class="Partner-logo">
-                  <img src="./img/partner/logo_bbr.png" alt="" />
-                </div>
-              </li>
-              
-              
+
             </ul>
           </div>
         </div>
