--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
       <div class="Container">
         <div id="bg_video">
           <video autoplay loop muted>
-            <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Main1080(L).mp4" type="video/mp4" />
-            <!-- <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/intro.jpg" alt="" /> -->
+            <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Main1080(L)_new.mp4" type="video/mp4" />
           </video>
         </div>
         <div class="textarea grid">
