--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <title>Kangsong Metaverse Museum - connecting the past and future</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- Meta Tag -->
+    <!-- Primary Meta Tags -->
+   <meta name="title" content="Kangsong Metaverse Museum - connecting the past and future" />
+   <meta name="description" content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse." />
+   <meta name="keywords" content="Kansong NFT, Kangsong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT" />
+
+   <!-- Open Graph / Facebook -->
+   <meta property="og:type" content="website" />
+   <meta property="og:url" content="http://kansong.io/" />
+   <meta property="og:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+   <meta
+     property="og:description"
+     content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+   />
+   <meta property="og:image" content="http://kansong.io/img/nft-full.jpg" />
+
+   <!-- Twitter -->
+   <meta property="twitter:card" content="summary_large_image" />
+   <meta property="twitter:url" content="http://kansong.io/" />
+   <meta property="twitter:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+   <meta
+     property="twitter:description"
+     content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+   />
+   <meta property="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
+
+   <meta name="twitter:card" content="summary" />
+   <meta name="twitter:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+   <meta
+     name="twitter:description"
+     content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+   />
+   <meta name="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
+   <meta name="twitter:site" content="http://kansong.io/" />
+    <!-- Meta Tag End -->
+
 
     <link rel="icon" type="image/png" href="./favicon.ico" />
     <script src="./js/jquery-3.6.0.min.js"></script>
