--- a/index.html
+++ b/index.html
@@ -539,14 +539,23 @@
                   <img src="./img/partner/logo_sgosda.png" alt="" />
                 </div>
               </li>
+              <li id="Partner-womans" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+                <div class="Partner-logo">
+                  <img src="./img/partner/logo_womans.png" alt="" />
+                </div>
+              </li>
+            </ul>
+            <ul class="imgarea m-col-6">
+              <li id="Partner-ahngraphics" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+                <div class="Partner-logo">
+                  <img src="./img/partner/logo_ag.png" alt="Ahngraphics" />
+                </div>
+              </li>
               <li id="Partner-bbr" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
                 <div class="Partner-logo">
                   <img src="./img/partner/logo_bbr.png" alt="" />
                 </div>
               </li>
-              
-              
-
             </ul>
           </div>
         </div>
