-. update sandbox banner

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
         <div class="imgarea grid">
           <div id="thesandbox">
-            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"><img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/expansion-banner-thesandbox.jpg" alt=""></p>
+            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"><img src="./img/expansion-banner-thesandbox.jpg" alt=""></p>
 
             <div class="Expansion-img">
               <div class="Expansion-img-1 thesandbox-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
