-. sandbox banner img url

--- a/index.html
+++ b/index.html
@@ -282,7 +282,6 @@
           <div class="subtitle delay-3">
             <video controls >
               <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Rebirth-Making.MP4" type="video/mp4" />
-              <!-- <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/intro.jpg" alt="" /> -->
             </video>
           </div>
         </div>
@@ -381,7 +380,7 @@
 
         <div class="imgarea grid">
           <div id="thesandbox">
-            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"><img src="./img/expansion-banner-thesandbox.jpg" alt=""></p>
+            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"><img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/expansion-banner-thesandbox_new.jpg" alt=""></p>
 
             <div class="Expansion-img">
               <div class="Expansion-img-1 thesandbox-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
