--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="imgarea grid">
           <div class="subtitle delay-3">
             <video controls >
-              <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Rebirth-Making.MP4" type="video/mp4" />
+              <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Rebirth-Making_new.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
