-. update kansong metaverse museum logo

--- a/img_detail.html
+++ b/img_detail.html
@@ -73,7 +73,7 @@
   </head>
 
   <body>
-    <section id="detail">
+    <section id="detail" class="subpage">
       <div class="Container">
         <div id="info_container"></div>
 
