--- a/imglistpage.html
+++ b/imglistpage.html
@@ -49,7 +49,7 @@
 
     <link rel="icon" type="image/png" href="./favicon.ico" />
     <script src="./js/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="./css/imgbase.css" />
+    <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/listpage.css" />
 
@@ -74,7 +74,7 @@
   </head>
 
   <body>
-    <section id="album-list">
+    <section id="album-list" class="subpage">
       <div class="Container">
         <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Album of Genre Paintings<br />by Hyewon</h2>
 
