-. update partner info & log img

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="imgarea grid">
           <div class="subtitle delay-3">
             <video controls>
-              <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Rebirth-Making_new.mp4" type="video/mp4" />
+              <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Rebirth-Making_0527.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -478,22 +478,17 @@
 
             <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">About Kansong Art Museum</p>
 
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">Kansong Art Museum which established in 1938 is the first modern private museum in Korea.</p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-              KAM still remains as one of the most prominent museums in Korea, and often referred as one of top 3 private museums in Korea.
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+              Kansong Art Museum which established in 1938 is the first modern private museum in Korea. KAM still remains as one of the most prominent museums in Korea, and often referred as one of
+              top 3 private museums in Korea. KAM collection of art, normally called Kansong Collection contains mostly Korean antique arts ranging from stone works, metal works, ceramics and
+              paintings to antique books dated between 6th century and early 20th century. Founded during Korea’s Japanese colonial era, KAM is also famous for its founding principle,
+              Munwhaboguk-Preserving nation’s sprits through culture.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-              KAM collection of art, normally called Kansong Collection contains mostly Korean antique arts ranging from stone works, metal works,<br />ceramics and paintings to antique books dated
-              between 6th century and early 20th century.
-            </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
-              Founded during Korea’s Japanese colonial era, KAM is also famous for its founding principle, Munwhaboguk-Preserving nation’s sprits through culture.
-            </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
               Kansong Art Museum’s founder Kansong Chun, Hyung-pil was one of the most famous art collectors in Korean history who has often been called the guardian of Korean cultural heritages
               during Japanese colonial era.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-11">
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
               The most representative collections of KAM include Hunmin-jeongeum, the original textbook of Korean alphabets (The UNESCO’s memory of the world, Korean National Treasure no.70), Celadon
               Prunus Vase with inlaid cloud and crane design (Korean National Treasure no. 68), and Album of Genre Paintings by Hyewon(Korean National Treasure no.135)
             </p>
