-. update introduce / team description

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
       <div class="Container">
         <div class="textarea grid">
           <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
-            Album of Gener Paintings<br />
-            by Hyewon
-            <p data-scroll="toggle(.fromRightIn, .fromRightOut)" class="delay-3 inline">(혜원 전신첩)</p>
+            Hyewon Sin, Yunbok, <br />Album of Genre Paintings by Hyewon
+
+            <p data-scroll="toggle(.fromRightIn, .fromRightOut)" class="delay-3 inline">(혜원 신윤복, 혜원전신첩)</p>
           </h2>
 
           <div class="margin-b-4">
@@ -173,15 +173,14 @@
           </div>
 
           <div>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">Sin Yunbok, better known as his pen name Hyewon was an elder son of famous court painter Sin Hanpyeong.</p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">Sin was particularly good at illustrating human figures, he even painted daring pictures of alluring woman,</p>
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+              Better known by his pen name Hyewon, Sin Yunbok was the elder son of famous court painter Sin Hanpyeong. Excelling at illustrating human figures, he boldly depicted alluring woman in
+              defiance of taboos despite his position as a reputable court painter.
+            </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-              a taboo for court painters who cared about their reputations. This album is certainly the finest of Sin’s known works.
+              This collection is unequivocally the finest of Sin’s known works, comprising 30 genre paintings of people in 18th century Hanyang (present day Seoul).
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">The album includes 30 genre paintings of people in Hanyang-present day Seoul in the 18th century.</p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
-              People are depicted in various situations in great detail and each painting emphasizes on their complicated emotion as well as their physical beauty.
-            </p>
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">Each painting portrays their complex emotion and physical beauty across various situations in meticulous detail.</p>
           </div>
 
           <!-- <div class="line"></div> -->
@@ -479,18 +478,19 @@
             <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">About Kansong Art Museum</p>
 
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-              Kansong Art Museum which established in 1938 is the first modern private museum in Korea. KAM still remains as one of the most prominent museums in Korea, and often referred as one of
-              top 3 private museums in Korea. KAM collection of art, normally called Kansong Collection contains mostly Korean antique arts ranging from stone works, metal works, ceramics and
-              paintings to antique books dated between 6th century and early 20th century. Founded during Korea’s Japanese colonial era, KAM is also famous for its founding principle,
-              Munwhaboguk-Preserving nation’s sprits through culture.
+              Opening in 1938 as the first modern private museum in Korea, Kansong Art Museum (KAM) is of unparalleled repute to count among the top three Korean institutions of its kind.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-              Kansong Art Museum’s founder Kansong Chun, Hyung-pil was one of the most famous art collectors in Korean history who has often been called the guardian of Korean cultural heritages
-              during Japanese colonial era.
+              The Kansong Collection comprises Korean antique art across the spectrum of stone works, metal works, ceramics, paintings, and antique books from the 6th to early 20th century.
+              Established during the Japanese colonial era, KAM is also known for its founding principle “Munwhaboguk” – preserving the national spirit through culture.
+            </p>
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+              KAM’s founder Kansong Chun Hyung-pil was one of the most famous art collectors in Korean history, regarded as the guardian of Korean cultural heritage for his pioneering work under and
+              against Japan’s colonial rule.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-              The most representative collections of KAM include Hunmin-jeongeum, the original textbook of Korean alphabets (The UNESCO’s memory of the world, Korean National Treasure no.70), Celadon
-              Prunus Vase with inlaid cloud and crane design (Korean National Treasure no. 68), and Album of Genre Paintings by Hyewon(Korean National Treasure no.135)
+              KAM’s signature collections include: Hunmin-jeongeum, the original textbook of Korean alphabets (UNESCO’s memory of the world, Korean National Treasure no. 70); Celadon Prunus Vase with
+              inlaid cloud and crane design (Korean National Treasure no. 68), and Album of Genre Paintings by Hyewon (Korean National Treasure no. 135).
             </p>
           </div>
 
