-. update : popup , minting title, minting guide

--- a/guide/mintingguide.html
+++ b/guide/mintingguide.html
@@ -78,7 +78,7 @@
     <div class="main-div">
       <div class="content-div">
         <div style="text-align: center;">
-          <h1>Kansong NFT Mint Guide</h1>
+          <h1>혜원 전신첩 NFT 프리세일 민팅 가이드</h1>
         </div>
         <div id="div-countdown" style="text-align: center;  padding: 30px;
         border-radius: 20px;
@@ -88,7 +88,7 @@
             target="_blank"
             style="text-decoration: underline; color: white; font-size: 25px"
             href="../mintingInfo.html"
-            >Go to Minting page</a
+            >민팅 페이지로 가기</a
           >
           <br>
           <br>
@@ -102,7 +102,7 @@
         <div>
           <br>
           <h3>권장 브라우저: Chrome / Brave / Microsoft Edge</h3>
-          <p>Kansong NFT 민팅 화면은 권장 브라우저에 최적화 되어있습니다.</p>
+          <p>혜원 전신첩 NFT 민팅 화면은 권장 브라우저에 최적화 되어있습니다.</p>
           <br>
         </div>
         <div>
