--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $("#header-inner").load("./page/header.html");
-        // $("#sidebar").load("./page/sidebar.html");
+        $("#sidebar").load("./page/sidebar.html");
       });
     </script>
   </head>
