--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -78,7 +78,7 @@
     $(document).ready(function () {
       $("#header-inner").load("./page/header.html");
       $("#popup-minting").load("./page/popup-minting.html");
-      // $("#sidebar").load("./page/sidebar.html");
+      $("#sidebar").load("./page/sidebar.html");
     });
   </script>
   <script>
@@ -133,7 +133,7 @@
     <div class="Container">
       <div class="textarea grid">
         <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
-          Kansong NFT Pre-Sales
+          혜원 전신첩 NFT 프리세일
         </h2>
         <div id="div-countdown" class="div-countdown" style="display: none">
           <h3
