-. update : href target : _blank -> _self

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="header-right-btn">
 
         <div id="btn-mintingInfo">
-          <a href="mintingInfo.html" target="_blank">
+          <a href="mintingInfo.html" target="_self">
             NFT Mint
           </a>
         </div>
@@ -148,7 +148,7 @@
 
     <div id="popup">
       <div>
-        <a href="mintingInfo.html" target="_blank"><img src="./img/popup.jpg" alt=""></a>
+        <a href="mintingInfo.html" target="_self"><img src="./img/popup.jpg" alt=""></a>
       </div>
       <div class="popup_close"><a href="">&#215;</a></div>
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
