-. add info : erc721A -. add terms of sale link

--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -177,6 +177,10 @@
             </tbody>
           </table>
         </div>
+        <div class="erc721a_info">
+          <p >혜원 전신첩 NFT는 가스비 절감을 위해 ERC721A(https://www.azuki.com/erc721a)를 기반으로 해서 제작되었습니다.<br> 한 번에 다수의 NFT를 민팅하는 가스비가 1개 민팅 비용과 크게 차이가 나지 않습니다. 따라서 한 번에 여러개의 NFT를 민팅하면 가스비 절감에 많은 도움이 됩니다.</p>
+        </div>
+        
         <div>
             <a
             class="go_mint_guide"
