--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -73,7 +73,7 @@
 
     gtag("config", "G-K9SP5XEHHV");
   </script>
-  
+
   <script type="text/javascript">
     $(document).ready(function () {
       $("#header-inner").load("./page/header.html");
@@ -93,7 +93,7 @@
   <header id="header" class="on">
     <div id="header-inner"></div>
 
-    <div class="header-right-btn">
+    <!-- <div class="header-right-btn">
       <div id="btn-home">
         <a href="index.html" target="_self">
           <svg width="36" height="36" viewBox="0 0 36 36" fill="none">
@@ -102,14 +102,13 @@
           </svg>
 
         </a>
-      </div>
+      </div> -->
     </div>
   </header>
 
   <aside id="sidebar" class="sidebar on"></aside>
 
   <section id="wallet_area" class="section5">
-    <div class="Container">
       <div  id="connect-btn" class="wallet_btn" style="display:none" >
         <button type="button" name="btn-wallet" id="btn-wallet" onclick="connectWallet()">
           Connect Wallet
@@ -125,7 +124,6 @@
         <img src="img/icon-warning.svg" alt="">
         <p id="net_info_msg">지갑의 네트워크를 Ethereum Mainnet으로 설정하세요.</p>
       </div>
-    </div>
   </section>
 
 
@@ -180,13 +178,27 @@
         <div class="erc721a_info">
           <p >혜원 전신첩 NFT는 가스비 절감을 위해 ERC721A(https://www.azuki.com/erc721a)를 기반으로 해서 제작되었습니다.<br> 한 번에 다수의 NFT를 민팅하는 가스비가 1개 민팅 비용과 크게 차이가 나지 않습니다. 따라서 한 번에 여러개의 NFT를 민팅하면 가스비 절감에 많은 도움이 됩니다.</p>
         </div>
-        
+
         <div>
             <a
             class="go_mint_guide"
               target="_blank"
               href="./guide/mintingguide.html"
-              >민팅 가이드 보기</a>          
+              >민팅 가이드 보기</a>
+        </div>
+
+        <div class="presale">
+          <h3>프리세일 혜택</h3>
+          <div >
+            <p>
+              (1) 추후 모든 혜원 전신첩 민팅에 화이트 리스트 우선 배정권<br />
+              (2) 고화질 단오풍정 그림 인쇄본 1매 증정 (국내 배송 무료, 해외 배송 유료)<br />
+              (3) 간송 메타버스 뮤지엄 전시회 우선 초대<br />
+              (4) 각종 간송 메타버스 뮤지엄 온오프라인 파티 우선 초대<br />
+              (5) 공연, 저작 발표회 등 각종 생태계 이벤트 우선 초대
+            </p>
+  
+          </div>
         </div>
       </div>
     </div>
