-. minting pause msg

--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -195,7 +195,7 @@
               (2) 고화질 단오풍정 그림 인쇄본 1매 증정 (국내 배송 무료, 해외 배송 유료)<br />
               (3) 간송 메타버스 뮤지엄 전시회 우선 초대<br />
               (4) 각종 간송 메타버스 뮤지엄 온오프라인 파티 우선 초대<br />
-              (5) 공연, 저작 발표회 등 각종 생태계 이벤트 우선 초대
+              (5) 공연, 제작 발표회 등 각종 생태계 이벤트 우선 초대
             </p>
   
           </div>
